# ferriseal

./: .editorconfig  .gitignore  Cargo.toml
api/: Cargo.toml  README.md  config-example.toml
api/migrations/2025-03-17-053613_clients_admin/: down.sql  up.sql
api/migrations/2025-05-31-125854_create_users/: down.sql  up.sql
api/migrations/2025-06-01-025139_create_orgs/: up.sql
api/migrations/2025-06-01-025148_create_users/: down.sql
api/migrations/2025-06-01-025152_create_vaults/: up.sql
api/migrations/2025-06-01-025156_create_entries/: down.sql
api/src/: auth.rs  bucket.rs  command.rs  config.rs  dir.rs  entry.rs  error.rs  health.rs  main.rs  org.rs  run.rs  schema.rs  state.rs  storage.rs  token.rs  user.rs  vault.rs
api/src/auth/: mod.rs  token.rs  user.rs
api/src/web/: handler.rs  middleware.rs  params.rs  routes.rs  server.rs
assets/: ferriseal-logo.xcf
cipher/: Cargo.toml
cipher/src/: encryption.rs  error.rs  lib.rs
db/: Cargo.toml  README.md
db/migrations/2025-06-01-025139_create_orgs/: up.sql
db/migrations/2025-06-01-025148_create_users/: up.sql
db/migrations/2025-06-01-025152_create_vaults/: down.sql  up.sql
db/migrations/2025-06-01-025156_create_entries/: up.sql
db/src/: db.rs  entry.rs  error.rs  lib.rs  org.rs  schema.rs  user.rs  vault.rs
dto/: Cargo.toml
dto/src/: actor.rs  entry.rs  lib.rs  org.rs  pagination.rs  role.rs  user.rs  vault.rs
memo/: Cargo.toml
memo/src/: actor.rs  bucket.rs  client.rs  file.rs  lib.rs  user.rs
memo/src/validators/: mod.rs
password/: Cargo.toml  README.md
password/src/: error.rs  lib.rs  password.rs
vault/: Cargo.toml
vault/src/: lib.rs
vault/src/validators/: uuid.rs
wasm/: Cargo.toml  index.html  leptosfmt.toml
wasm/src/: app.rs  container.rs  error.rs  main.rs
website/: Cargo.toml  README.md  config-example.toml
website/frontend/public/assets/css/: style.css
website/src/: config.rs  ctx.rs  error.rs  main.rs  run.rs
website/src/models/: pagination.rs  params.rs  template.rs
website/src/services/: auth.rs  buckets.rs  captcha.rs  clients.rs  dirs.rs  entries.rs  files.rs  mod.rs  orgs.rs  users.rs  vaults.rs
website/src/web/: buckets.rs  clients.rs  dirs.rs  entries.rs  error.rs  files.rs  index.rs  login.rs  middleware.rs  mod.rs  my_vault.rs  orgs.rs  policies.rs  profile.rs  routes.rs  users.rs  vaults.rs
website/templates/layout/: base.html  footer.html  nav.html
website/templates/pages/: bucket.html  buckets.html  dir.html  entry.html  index.html  my_bucket.html  my_vault.html  new_dir.html  new_entry.html  new_org.html  new_user.html  new_vault.html  org.html  orgs.html  upload_photos.html  user.html  users.html  vault.html  vaults.html
website/templates/widgets/: delete_entry_form.html  delete_org_form.html  delete_user_form.html  delete_vault_form.html  edit_bucket_controls.html  edit_entry_controls.html  edit_entry_form.html  edit_org_controls.html  edit_org_form.html  edit_user_controls.html  edit_vault_controls.html  login_form.html  new_bucket_form.html  new_entry_form.html  new_org_form.html  new_vault_form.html  orgs.html  search_entries.html  update_user_role_form.html  users.html
