[package]
name = "cipher"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
validator.workspace = true
uuid.workspace = true
