[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
argon2.workspace = true
axum.workspace = true
axum-test.workspace = true
chrono.workspace = true
clap.workspace = true
deadpool-diesel.workspace = true
diesel.workspace = true
google-cloud-storage.workspace = true
image.workspace = true
infer.workspace = true
jsonwebtoken.workspace = true
kamadak-exif.workspace = true
multer.workspace = true
rpassword.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
text_io.workspace = true
tokio.workspace = true
toml.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
validator.workspace = true
dto = { path = "../dto" }
vault = { path = "../vault" }
