[package]
name = "wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
gloo-net = "0.6.0"
leptos = { version = "0.8.2", features = ["csr"] }
reactive_stores = "0.2.2"
serde = { version = "1.0.219", features = ["derive"] }
snafu = "0.8.6"
wasm-bindgen = "0.2.100"
web-sys = "0.3.77"
